# aries-acapy-plugin-did-web

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
didweb/: route_registration.py
didweb/routes/: __init__.py  register_route.py
