[tool.poetry]
name = "aries-acapy-didweb"
version = "0.1.0"
description = ""
authors = ["Clément Humbert <clement.humbert@sicpa.com>"]
readme = "README.md"
packages = [{include = "didweb"}]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = { git = "https://github.com/sicpa-dlab/aries-cloudagent-python", rev = "b9ee6d30463320950d44c275d62ba31e1c3f1892"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"